# color_cloud

./: CMakeLists.txt  README.md  cam_imu-camchain-imucam.yaml  colorCloud.yaml  package.xml  sync_1-camchain-imucam.yaml
include/: colorMap.hpp  colorMap_sync.cpp  colorMap_sync.h  parameter.cpp  parameter.h
launch/: colorMap.launch  depth.launch  rgbcloud.rviz  sync_color.launch
pre_version/: colorMap.hpp  lidar_camera_04282050.hpp  lidar_camera_04291346.hpp  lidar_camera_04291500.hpp  lidar_camera_04291554.hpp  lidar_camera_05011459.hpp  lidar_camera_05032037.hpp
pre_version/include/: colorMap.hpp  colorMap_copy.hpp  colorMapv2.hpp  lidar_camera.hpp  parameter.cpp  parameter.h  tf.hpp
pre_version/src/: color_point3d.cpp  gamma.cpp  project.cpp  test.cpp  test_tbb.cpp  tf.cpp
src/: colorMap.cpp  sync_main.cpp  test_tbb.cpp
